# mansour-strategy-evaluation-service

./: .env  .gitignore  pyproject.toml
src/mansour_strategy_evaluation_service/: main.py
src/mansour_strategy_evaluation_service/client/: base_client.py  market_history_client.py
src/mansour_strategy_evaluation_service/config/: env_settings.py  eureka_config.py  logging.yaml  logging_config.py  redis_client.py
src/mansour_strategy_evaluation_service/core/kafka/: async_kafka_consumer.py  base_consumer.py
src/mansour_strategy_evaluation_service/event/: one_minute_candle_consumer.py  user_strategy_consumer.py
src/mansour_strategy_evaluation_service/model/: api_response.py  candle.py  one_minute_candle.py  user_strategy_payload.py
src/mansour_strategy_evaluation_service/repository/: watchlist_repository.py
src/mansour_strategy_evaluation_service/service/: evaluation_coordinator.py  watchlist_service.py
src/mansour_strategy_evaluation_service/strategy/: __init__.py  base_strategy.py  ma_crossover_strategy.py  strategy_engine.py
